Support padding in all standard TexCoordFunctions